force-app/main/default/objects/clofor_com_cfs__PayReqCash__c/fields/clofor_com_cfs__AmountPaidLocalforTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidLocalforTrxPlan__c</fullName>
    <label>Amount Paid(Local) for Trx Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>