force-app/main/default/objects/clofor_com_cfs__PayReqCash__c/fields/clofor_com_cfs__AmountReceivedFCYforTrx_Plan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountReceivedFCYforTrx_Plan__c</fullName>
    <label>Amount Received(FCY) for Trx Plan</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>