force-app/main/default/objects/clofor_com_cfs__PayReqCash__c/fields/clofor_com_cfs__AmountReceivedLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountReceivedLocalFormula__c</fullName>
    <formula>clofor_com_cfs__CashID__r.clofor_com_cfs__ActualAmountCollected__c</formula>
    <label>Amount Received(Local)-Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>