force-app/main/default/objects/clofor_com_cfs__PayReqCash__c/fields/clofor_com_cfs__CashID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashID__c</fullName>
    <label>CASH ID</label>
    <referenceTo>clofor_com_cfs__CASH_BOOK__c</referenceTo>
    <relationshipName>PayReqCash</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>